Shading issue using modifiers #42065

Closed
opened 2014-10-03 22:47:14 +02:00 by Voyager Voyager · 9 comments

System Information
Windows 7 64bit, GeForce GT 555M

Blender Version
Broken: (2.72 805bb22)
Worked: (2.69 8e59beb)

Short description of error
Screw and Array modifier can create shading issue in certain situations

Exact steps for others to reproduce the error
Open attached file and disable Merge option in Array modifier - shading issue disappear
Another way to solve the problem is disabling Smooth Shading in Screw modifier{F114496}

**System Information** Windows 7 64bit, GeForce GT 555M **Blender Version** Broken: (2.72 805bb22) Worked: (2.69 8e59beb) **Short description of error** Screw and Array modifier can create shading issue in certain situations **Exact steps for others to reproduce the error** Open attached file and disable Merge option in Array modifier - shading issue disappear Another way to solve the problem is disabling Smooth Shading in Screw modifier{[F114496](https://archive.blender.org/developer/F114496/flat_shading.blend)}

Changed status to: 'Open'

Changed status to: 'Open'
Sergey Sharybin was assigned by Voyager Voyager 2014-10-03 22:47:14 +02:00

Added subscriber: @voyagercgi

Added subscriber: @voyagercgi
Sergey Sharybin was unassigned by Bastien Montagne 2014-10-03 22:56:46 +02:00
Bastien Montagne self-assigned this 2014-10-03 22:56:46 +02:00

Added subscriber: @Sergey

Added subscriber: @Sergey

I believe this has been fixed, precisely today! ;)

Please try tomorrow a build from our buildbot - or the official 2.72 release that should be available tomorrow too.

I believe this has been fixed, precisely today! ;) Please try tomorrow a build from [our buildbot](https://builder.blender.org/download) - or the official 2.72 release that should be available tomorrow too.

Should go to sleep, today's fix affects wire, not array! :(

Should go to sleep, today's fix affects wire, not array! :(

This issue was referenced by 8ac3c3d3ee

This issue was referenced by 8ac3c3d3ee229ba5b2df90f2276db1049bd104cc

Changed status from 'Open' to: 'Resolved'

Changed status from 'Open' to: 'Resolved'

Closed by commit 8ac3c3d3ee.

Closed by commit 8ac3c3d3ee.

This issue was referenced by 30236751d9

This issue was referenced by 30236751d9f3b4729d37a368da958bbfcd55abb5
Sign in to join this conversation.
No Label
Interest
Alembic
Interest
Animation & Rigging
Interest
Asset Browser
Interest
Asset Browser Project Overview
Interest
Audio
Interest
Automated Testing
Interest
Blender Asset Bundle
Interest
BlendFile
Interest
Collada
Interest
Compatibility
Interest
Compositing
Interest
Core
Interest
Cycles
Interest
Dependency Graph
Interest
Development Management
Interest
EEVEE
Interest
EEVEE & Viewport
Interest
Freestyle
Interest
Geometry Nodes
Interest
Grease Pencil
Interest
ID Management
Interest
Images & Movies
Interest
Import Export
Interest
Line Art
Interest
Masking
Interest
Metal
Interest
Modeling
Interest
Modifiers
Interest
Motion Tracking
Interest
Nodes & Physics
Interest
OpenGL
Interest
Overlay
Interest
Overrides
Interest
Performance
Interest
Physics
Interest
Pipeline, Assets & IO
Interest
Platforms, Builds & Tests
Interest
Python API
Interest
Render & Cycles
Interest
Render Pipeline
Interest
Sculpt, Paint & Texture
Interest
Text Editor
Interest
Translations
Interest
Triaging
Interest
Undo
Interest
USD
Interest
User Interface
Interest
UV Editing
Interest
VFX & Video
Interest
Video Sequencer
Interest
Virtual Reality
Interest
Vulkan
Interest
Wayland
Interest
Workbench
Interest: X11
Legacy
Blender 2.8 Project
Legacy
Milestone 1: Basic, Local Asset Browser
Legacy
OpenGL Error
Meta
Good First Issue
Meta
Papercut
Meta
Retrospective
Meta
Security
Module
Animation & Rigging
Module
Core
Module
Development Management
Module
EEVEE & Viewport
Module
Grease Pencil
Module
Modeling
Module
Nodes & Physics
Module
Pipeline, Assets & IO
Module
Platforms, Builds & Tests
Module
Python API
Module
Render & Cycles
Module
Sculpt, Paint & Texture
Module
Triaging
Module
User Interface
Module
VFX & Video
Platform
FreeBSD
Platform
Linux
Platform
macOS
Platform
Windows
Priority
High
Priority
Low
Priority
Normal
Priority
Unbreak Now!
Status
Archived
Status
Confirmed
Status
Duplicate
Status
Needs Info from Developers
Status
Needs Information from User
Status
Needs Triage
Status
Resolved
Type
Bug
Type
Design
Type
Known Issue
Type
Patch
Type
Report
Type
To Do
No Milestone
No project
No Assignees
3 Participants
Notifications
Due Date
The due date is invalid or out of range. Please use the format 'yyyy-mm-dd'.

No due date set.

Dependencies

No dependencies set.

Reference: blender/blender#42065
No description provided.