Fix T42065: Shading issue using Array modifier

Gah... Dirty normal flag should be set on *real* final dm, after merge is done. :/